manifests/typesense/service-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: typesense-api
  namespace: typesense
spec:
  ports:
  - name: http
    port: 8108
    targetPort: 8108
  selector:
    app: typesense
