manifests/typesense/service-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: typesense-headless
  namespace: docs-next
spec:
  clusterIP: None
  ports:
  - name: http
    port: 8108
    targetPort: 8108
  selector:
    app: typesense
